<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:id="@+id/sv_recipe_details"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:background="@color/gray"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ingredients"
        android:textSize="20sp"
        android:elevation="2dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:layout_marginBottom="4dp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipes_ingredients"
        android:layout_marginBottom="4dp"
        android:elevation="2dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/steps"
        android:textSize="20sp"
        android:layout_marginBottom="4dp"
        android:elevation="2dp"

        android:padding="4dp"
        android:textStyle="bold" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipes_steps"
        android:layout_width="match_parent"
        android:elevation="2dp"
        android:layout_height="wrap_content" />
</LinearLayout>
</android.support.v4.widget.NestedScrollView>